# mesh-surface-process

./: .gitignore  .gitmodules  CMakeLists.txt
include/: bubble_offset.h  log.h  mesh_processor.h  point_cloud_utilities.h
scripts/: A6+_YOLOPoseAnnGenerator.py  A6_YOLOAnnGenerator.py  A7_UNetMaskGenerator.py  B1_remap_labels_to_0-7.py  B2_split_train_test.py  C1_map_preds_to_mesh.py  C2_merge_YOLO_UNet_pred.py  C3_calc_metrics_of_results.py  GCN1_process_training_data.py  GCN2_merge_stage1_2_results.py  TG1_convert_npz_to_obj_txt.py  TG2_calc_metrics_of_results.py  TG3_map_10000pred_to_origin.py  convert_m_to_obj.py  merge_multispectral_tiff.py  runA1.py  runA2.py  runA3.py  runA4-2D.py  runA4-3D.py  runA6.py  runE1_RemapUV.py  visualize_all_stage_masks.py  visualize_m_labels.py  visualize_npy_7th_mask.py  visualize_npz_3d_2d_area_ratio.py  visualize_npz_labels.py  visualize_npz_uv.py  visualize_obj_json.py  visualize_yolo_det_gt_and_predicts.py  visualize_yolo_seg_gt_and_predicts.py
src/: 00_Playground.cpp  01_Gradient.cpp  02_Mapping.cpp  03_DataPrepare.cpp  04_MICCAI.cpp  05_MICCAIPrepare.cpp  A1_MeshCleaner.cpp  A3_MeshMapper.cpp  A4_ImageExtractor.cpp  A5_SingleToothExtractor.cpp  E1_RemapUV.cpp  F1_RobustLap.cpp  bubble_offset.cpp  mesh_processor.cpp  point_cloud_utilities.cpp  test.cpp
